--- a/include/meson.build
+++ b/include/meson.build
@@ -429,6 +429,7 @@ if with_dtrace
     dtrace_hdr += dtrace_header.process(dtrace_tmpl)
 endif
 
+# install SDK headers
 if build_xorg
     install_data(
         [
@@ -442,6 +443,7 @@ if build_xorg
             'cursor.h',
             'cursorstr.h',
             'dix.h',
+            'dix_screen_hooks.h',
             'dixaccess.h',
             'dixfont.h',
             'dixfontstr.h',
