treewide: drop remains XvMC extension
XvMC X11 extension alredy has been removed, but for ABI compatibility,
we did leave the DDX side intact. Now it's time to remove that, too.

This is explicitly breaking ABI: drivers that still did support XvMC
need to be recompiled.

Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>

--- a/Xext/meson.build
+++ b/Xext/meson.build
@@ -51,8 +51,8 @@ if build_xselinux
 endif
 
 if build_xv
-    srcs_xext += ['xvmain.c', 'xvdisp.c', 'xvmc.c']
-    hdrs_xext += ['xvdix.h', 'xvmcext.h']
+    srcs_xext += ['xvmain.c', 'xvdisp.c' ]
+    hdrs_xext += ['xvdix.h' ]
 endif
 
 libxserver_xext = static_library('xserver_xext',
